infrastructure/k8s/be-auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be-auth
  template:
    metadata:
      labels:
        app: be-auth
    spec:
      containers:
        - name: be-auth
          # image: us.gcr.io/ticketing-dev-359710/be-auth
          image: manelcastro/be-auth:latest
---
apiVersion: v1
kind: Service
metadata:
  name: be-auth-srv
spec:
  selector:
    app: be-auth
  type: ClusterIP
  ports:
    - name: be-auth
      protocol: TCP
      port: 9001
      targetPort: 9001
