infrastructure/k8s/be-backoffice-alpha.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-backoffice-alpha-alpha-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be-backoffice-alpha
  template:
    metadata:
      labels:
        app: be-backoffice-alpha
    spec:
      containers:
        - name: be-backoffice-alpha
          # image: us.gcr.io/ticketing-dev-359710/be-auth
          image: manelcastro/be-backoffice-alpha
---
apiVersion: v1
kind: Service
metadata:
  name: be-backoffice-alpha-srv
spec:
  selector:
    app: be-backoffice-alpha
  type: ClusterIP
  ports:
    - name: be-backoffice-alpha
      protocol: TCP
      port: 9009
      targetPort: 9009
