infrastructure/k8s/be-backoffice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-backoffice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be-backoffice
  template:
    metadata:
      labels:
        app: be-backoffice
    spec:
      containers:
        - name: be-backoffice
          # image: us.gcr.io/ticketing-dev-359710/be-auth
          image: manelcastro/be-backoffice
---
apiVersion: v1
kind: Service
metadata:
  name: be-backoffice-srv
spec:
  selector:
    app: be-backoffice
  type: ClusterIP
  ports:
    - name: be-backoffice
      protocol: TCP
      port: 9002
      targetPort: 9002
