infrastructure/k8s/fe-backoffice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-backoffice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-backoffice
  template:
    metadata:
      labels:
        app: fe-backoffice
    spec:
      containers:
        - name: fe-backoffice
          # image: us.gcr.io/ticketing-dev-359710/be-auth
          image: manelcastro/fe-backoffice
---
apiVersion: v1
kind: Service
metadata:
  name: fe-backoffice-srv
spec:
  selector:
    app: fe-backoffice
  type: ClusterIP
  ports:
    - name: fe-backoffice
      protocol: TCP
      port: 3003
      targetPort: 3000
