infrastructure/k8s/postgres-be-contact-form-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-be-contact-form # Sets service name
  labels:
    app: postgres-be-contact-form # Labels and Selectors
spec:
  type: NodePort # Sets service type
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: postgres-be-contact-form
